fix: preventing svg full-width. aligning heading links

--- a/src/templates/blog.css
+++ b/src/templates/blog.css
@@ -8,12 +8,24 @@
   @apply font-bold text-2xl mt-4 mb-2;
 }
 
+.blog-post h1 a.before {
+  @apply mt-5;
+}
+
 .blog-post h2 {
   @apply text-xl font-bold my-2;
 }
 
+.blog-post h2 a.before {
+  @apply mt-3;
+}
+
 .blog-post h3 {
   @apply font-bold my-2;
+}
+
+.blog-post h3 a.before {
+  @apply mt-1;
 }
 
 .blog-post pre {
